@@ -15,6 +15,7 @@
     [dialog] @FILE values not saved on cancel #321
     Preferences|Desktop|Font dlg honor cancel
     fix new config devices shown not saved
+    path bar middle-click replace contents and activate
 0.9.3   2014-01-17:
     fix memory leak on draw selection rectangle on desktop #397
     [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
